# devcolor-chat-bot

./: .gitignore  README.md  devcolorbot  pyproject.toml  requirements.txt  sample_output.txt
scripts/: capture_demo.sh  install.sh
src/devcolor_rag/: __init__.py  cli.py  config.py  corpus.py  embedder.py  formatting.py  index.py  launcher.py  llm.py  observability.py  paths.py  pipeline.py  profiles.py  prompt.py  retriever.py  setup_wizard.py  spinner.py  theme.py
tests/: test_config.py  test_corpus.py  test_formatting.py
